terraform/main.tf
# main.tf

# Data source to fetch the list of availability zones
data "aws_availability_zones" "available" {}

# Create VPC
resource "aws_vpc" "atc_app_vpc" {
  cidr_block           = var.vpc_cidr
  enable_dns_support   = true
  enable_dns_hostnames = true
  tags = {
    Name = "atc-app-vpc"
  }
}

# Internet Gateway
resource "aws_internet_gateway" "atc_app_igw" {
  vpc_id = aws_vpc.atc_app_vpc.id
  tags = {
    Name = "atc-app-igw"
  }
}

# Public Subnets
resource "aws_subnet" "public_subnet" {
  count                   = length(var.public_subnet_cidrs)
  vpc_id                  = aws_vpc.atc_app_vpc.id
  cidr_block              = var.public_subnet_cidrs[count.index]
  map_public_ip_on_launch = true
  availability_zone       = data.aws_availability_zones.available.names[count.index]
  tags = {
    Name = "atc-app-public-subnet-${count.index + 1}"
  }
}

# Private Subnets
resource "aws_subnet" "private_subnet" {
  count             = length(var.private_subnet_cidrs)
  vpc_id            = aws_vpc.atc_app_vpc.id
  cidr_block        = var.private_subnet_cidrs[count.index]
  availability_zone = data.aws_availability_zones.available.names[count.index]
  tags = {
    Name = "atc-app-private-subnet-${count.index + 1}"
  }
}

# NAT Gateway for Private Subnets
resource "aws_eip" "nat_eip" {
  count = length(var.public_subnet_cidrs)
}

resource "aws_nat_gateway" "nat_gw" {
  count         = length(var.public_subnet_cidrs)
  allocation_id = aws_eip.nat_eip[count.index].id
  subnet_id     = aws_subnet.public_subnet[count.index].id
  tags = {
    Name = "atc-app-nat-gw-${count.index + 1}"
  }
}

# Public Route Table
resource "aws_route_table" "public_rt" {
  vpc_id = aws_vpc.atc_app_vpc.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.atc_app_igw.id
  }
  tags = {
    Name = "atc-app-public-rt"
  }
}

# Associate Public Subnets with Public Route Table
resource "aws_route_table_association" "public_rt_assoc" {
  count          = length(aws_subnet.public_subnet)
  subnet_id      = aws_subnet.public_subnet[count.index].id
  route_table_id = aws_route_table.public_rt.id
}

# Private Route Table
resource "aws_route_table" "private_rt" {
  vpc_id = aws_vpc.atc_app_vpc.id
  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.nat_gw[0].id
  }
  tags = {
    Name = "atc-app-private-rt"
  }
}

# Associate Private Subnets with Private Route Table
resource "aws_route_table_association" "private_rt_assoc" {
  count          = length(aws_subnet.private_subnet)
  subnet_id      = aws_subnet.private_subnet[count.index].id
  route_table_id = aws_route_table.private_rt.id
}
# main.tf in the root directory

module "bastion" {
  source          = "./modules/bastion"
  project_name    = var.project_name
  vpc_id          = var.vpc_id
  subnet_id       = var.public_subnet_id
  ami_id          = var.ami_id
  instance_type   = var.instance_type
  allowed_ip      = var.allowed_ip
}
